add flex to css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
        <div clas="nav-bar">
         <nav>
         <img src="" alt="fordLogo">
-            <ul>
-                <div>
+            <ul class="topNav">
+                
                 <li><a href="">Features</a></li>
                 <li><a href="">Pricing</a></li>
                 <li><a href="">Community</a></li>
@@ -38,7 +38,7 @@
 
 
             </div>
-            <div class="flexRigth">
+            <div class="flexRight">
                <img src="" alt="F150Lightning"> 
 
 
@@ -47,6 +47,7 @@
         </div>
          <div class="Testamony">
             <img src="" alt="BillFord">
+            <caption>Bill will say something here</caption>
 
 
         </div>
