formate bottom Nav

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
         </div>
          <div class="Testamony">
-            <img src="" alt="BillFord">
-            <caption>Bill will say something here</caption>
+            <img src="" alt="James D Farley Jr.">
+            <caption>James will say something here</caption>
 
 
         </div>
@@ -57,21 +57,21 @@
             <img src="" alt="fordLogo">
             <ul>
                 <li>Products</li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/">Features</a></li>
+                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/">Pricing</a></li>
+                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/">Promotion</a></li>
             </ul>
             <ul>
                 <li>Community</li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login">Featured users</a></li>
+                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login">The Portal</a></li>
+                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login">Live Events</a></li>
             </ul>
             <ul>
                 <li>Company</li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer">About Us</a></li>
+                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer">Contact Us</a></li>
+                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer">History</a></li>
             </ul>
             <a href=""></a>
         </div>
@@ -82,22 +82,10 @@
                 <li><a href=""><img src="" alt="FaceBook"></a></li>
                 <li><a href=""><img src="" alt="Instagram"></a></li>
                 <li><a href=""><img src="" alt="Twitter"></a></li>
-                <li><a href=""><img src="" alt="Youtube"></a></li>
+                <li><a href=""><img src="" alt="TicToc"></a></li>
             </ul>
         </div>
     </footer>
-        
-
-
-
-
     </body>
-    <footer>
-
-
-
-
-    </footer>
-    
 </body>
 </html>
