add mage links, and format

--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
     <body>
         <div class="wrapper">
             <div class="flexLeft">
-                <img src="" alt="Ranger">
-                <img src="" alt="F150">
-                <img src="" alt="Bronco">
-                <img src="" alt="MachE">
-                <img src="" alt="Explorer">
-                <img src="" alt="Expidetion">
-
-
+                <ul>
+                    <li><img src="Ranger.jfif" alt="Ranger"></li>
+                    <li><img src="f150.jfif" alt="F150"></li>
+                    <li><img src="Bronco.jfif" alt="Bronco"></li>
+                    <li><img src="MachE.jfif" alt="MachE"></li>
+                    <li><img src="Explorer.jfif" alt="Explorer"></li>
+                    <li><img src="Expidetion.jfif" alt="Expidetion"></li>
+                </ul>
 
             </div>
             <div class="flexRight">
-               <img src="" alt="F150Lightning"> 
+               <img src="Lightning.jpg" alt="F150Lightning"> 
 
 
 
             </div>
         </div>
          <div class="Testamony">
-            <img src="" alt="James D Farley Jr.">
+            <img src="Ford-Personnel-small.jpeg" alt="James D Farley Jr.">
             <caption>James will say something here</caption>
 
 
@@ -57,21 +57,21 @@
             <img src="" alt="fordLogo">
             <ul>
                 <li>Products</li>
-                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/">Features</a></li>
-                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/">Pricing</a></li>
-                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/">Promotion</a></li>
+                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/" target="_blank">Features</a></li>
+                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/" target="_blank">Pricing</a></li>
+                <li><a href="https://shop.ford.com/showroom/?gnav=header-suvs-all-vehicles#/" target="_blank">Promotion</a></li>
             </ul>
             <ul>
                 <li>Community</li>
-                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login">Featured users</a></li>
-                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login">The Portal</a></li>
-                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login">Live Events</a></li>
+                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login" target="_blank">Featured users</a></li>
+                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login" target="_blank">The Portal</a></li>
+                <li><a href="https://sso.ci.ford.com/authsvc/mtfim/sps/authsvc?PolicyId=urn:ibm:security:authentication:asf:basicldapuser&identity_source_id=75d08ad1-510f-468a-b69b-5ebc34f773e3&Target=https%3A%2F%2Fsso.ci.ford.com%2Foidc%2Fendpoint%2Fdefault%2Fauthorize%3FqsId%3Db9179840-972e-479e-afa5-d21b425a8ed6%26client_id%3D880cf418-6345-4e3b-81cd-7b623309b571#appID=CCCA9FB8-B941-46AD-A89F-F9D9D699DD68&propertySpecificContentKey=brand_ford&originURL=https%3A%2F%2Fshop.ford.com%2Fshowroom%2F%3Fgnav%3Dheader-suvs-all-vehicles%26existingFragments%3D%2523%252F&lang=en_us&fsURL=https%3A%2F%2Fapi.mps.ford.com&page=login" target="_blank">Live Events</a></li>
             </ul>
             <ul>
                 <li>Company</li>
-                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer">About Us</a></li>
-                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer">Contact Us</a></li>
-                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer">History</a></li>
+                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer" target="_blank">About Us</a></li>
+                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer" target="_blank">Contact Us</a></li>
+                <li><a href="https://www.ford.com/dealerships/?gnav=header-finddealer" target="_blank">History</a></li>
             </ul>
             <a href=""></a>
         </div>
@@ -79,10 +79,10 @@
             <small>Created By Shawn Cannon as Demo for L2C Prgram</small>
             <ul>
                 <li>FollowUs:</li>
-                <li><a href=""><img src="" alt="FaceBook"></a></li>
-                <li><a href=""><img src="" alt="Instagram"></a></li>
-                <li><a href=""><img src="" alt="Twitter"></a></li>
-                <li><a href=""><img src="" alt="TicToc"></a></li>
+                <li><a href="https://www.facebook.com/ford/" target="_blank"><img src="FBicon.png" alt="FaceBook"></a></li>
+                <li><a href="https://www.instagram.com/ford/?hl=en" target="_blank"><img src="insta-icon.jfif" alt="Instagram"></a></li>
+                <li><a href="https://twitter.com/Ford?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><img src="twitter-icon.png" alt="Twitter"></a></li>
+                <li><a href="https://www.tiktok.com/@ford?lang=en" target="_blank"><img src="tictocicon.png" alt="TicToc"></a></li>
             </ul>
         </div>
     </footer>
